--- a/public/index.html
+++ b/public/index.html
@@ -756,7 +756,7 @@
       margin-top: 2px;
     }
 
-    /* Modals & Overlays */
+    /* Modals and Overlays */
     .modal {
       display: none;
       position: fixed;
@@ -805,7 +805,7 @@
       color: var(--text-muted);
     }
 
-    /* Loading & Errors */
+    /* Loading and Errors */
     .loading {
       text-align: center;
       padding: 40px 20px;
@@ -1140,7 +1140,7 @@
 
           <!-- Memory/Storage Access -->
           <details style="margin-top: 16px;">
-            <summary style="font-weight: 600; cursor: pointer;">💾 Memory & Storage Access</summary>
+            <summary style="font-weight: 600; cursor: pointer;">💾 Memory and Storage Access</summary>
             <div id="traceAnalysisDetails" style="margin-top: 12px; max-height: 400px; overflow-y: auto;"></div>
           </details>
 
